# dbqr-qa

./: .gitignore  requirements.txt  setup.cfg
dbqrqa/: dataset.py  evaluation.py
publish/: unittest.sh
tests/: gpt_evaluation.py  test_dataset.py  test_evaluation.py
