[metadata]
name = dbqrqa
version = 0.0.1
description = DBQR-QA: A Question Answering Dataset on a Hybrid of Database Querying and Reasoning
home_page = https://dbqr-qa.github.io
author = Rungsiman Nararatwong
author_email = rungsiman@gmail.com
license = GNU General Public License Version 3

[options]
packages = find:
install_requires =
    numpy
    openai
    pandas
    tqdm
